[project]
name = "neusfacto"
version = "0.1.0"

dependencies=[
    "nerfstudio==0.3.3",
    "rerun-sdk==0.8.1",
    "timm==0.4.12",
    "pytorch_lightning<2.0",
]

[tool.setuptools.packages.find]
include = ["neusfacto"]

[project.entry-points.'nerfstudio.method_configs']
clean_neusfacto = 'neusfacto.neusfacto_config:clean_neusfacto'